Make sure water mark has no pointer events so the homapage hero ctas are clickable on mobile

--- a/resources/styles/components/heroes/primary/_left.scss
+++ b/resources/styles/components/heroes/primary/_left.scss
@@ -2,7 +2,7 @@
 	@apply relative overflow-hidden py-0;
 
 	&__watermark {
-		@apply absolute bottom-0 right-0 z-30 h-auto w-90 opacity-0 md:opacity-15 lg:w-139;
+		@apply pointer-events-none absolute bottom-0 right-0 z-30 h-auto w-90 opacity-0 md:opacity-15 lg:w-139;
 	}
 
 	&__overlay {
